--- a/src/main/resources/assets/occultism/lang/zh_cn.json
+++ b/src/main/resources/assets/occultism/lang/zh_cn.json
@@ -1,5 +1,5 @@
 {
   "itemGroup.occultism": "Occultism",
-  "item.occultism.item_1": "物品1",
-  "item.occultism.item_2": "物品2"
+  "item.occultism.item_1": "鐗╁搧1",
+  "item.occultism.item_2": "鐗╁搧2"
 }
