--- a/src/main/resources/assets/occultism/lang/en_us.json
+++ b/src/main/resources/assets/occultism/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "itemGroup.occultism": "Occultism",
   "item.occultism.item_1": "item1",
-  "item.occultism.item_2": "item2"
+  "item.occultism.item_2": "item2",
+  "item.occultism.item_root_stick": "debug"
 }
