--- a/src/main/resources/assets/occultism/lang/zh_cn.json
+++ b/src/main/resources/assets/occultism/lang/zh_cn.json
@@ -1,5 +1,6 @@
 {
   "itemGroup.occultism": "Occultism",
   "item.occultism.item_1": "物品1",
-  "item.occultism.item_2": "物品2"
+  "item.occultism.item_2": "物品2",
+  "item.occultism.item_root_stick": "测试小木棍"
 }
