add ingot and lang

--- a/src/main/resources/assets/occultism/lang/zh_cn.json
+++ b/src/main/resources/assets/occultism/lang/zh_cn.json
@@ -2,6 +2,11 @@
   "itemGroup.occultism": "Occultism",
   "item.occultism.item_1": "物品1",
   "item.occultism.item_2": "物品2",
+  "item.occultism.ingotcopper": "铜",
+  "item.occultism.ingotsilver": "银",
+  "item.occultism.ingotlead": "铅",
+  "item.occultism.ingotaluminium": "铝",
+  "item.occultism.ingottin": "锡",
   "item.occultism.item_root_stick": "测试小木棍",
   "block.occultism.block_1": "方块1",
   "block.occultism.orebrass": "黄铜矿",
