--- a/src/main/resources/assets/occultism/lang/en_us.json
+++ b/src/main/resources/assets/occultism/lang/en_us.json
@@ -2,6 +2,11 @@
   "itemGroup.occultism": "Occultism",
   "item.occultism.item_1": "item1",
   "item.occultism.item_2": "item2",
+  "item.occultism.ingotcopper": "Copper",
+  "item.occultism.ingotsilver": "Silver",
+  "item.occultism.ingotlead": "Lead",
+  "item.occultism.ingotaluminium": "Aluminium",
+  "item.occultism.ingottin": "Tin",
   "item.occultism.item_root_stick": "debug",
   "block.occultism.block_1": "block1",
   "block.occultism.orebrass": "OreBrass",
