--- a/src/main/resources/assets/occultism/lang/en_us.json
+++ b/src/main/resources/assets/occultism/lang/en_us.json
@@ -1,17 +1,32 @@
 {
   "itemGroup.occultism": "Occultism",
-  "item.occultism.item_1": "item1",
-  "item.occultism.item_2": "item2",
+  "item.occultism.item_1": "Item1",
+  "item.occultism.item_2": "Item2",
   "item.occultism.ingotcopper": "Copper",
   "item.occultism.ingotsilver": "Silver",
   "item.occultism.ingotlead": "Lead",
   "item.occultism.ingotaluminium": "Aluminium",
   "item.occultism.ingottin": "Tin",
-  "item.occultism.item_root_stick": "debug",
-  "block.occultism.block_1": "block1",
+  "item.occultism.fluid_bucket": "Bucket",
+  "item.occultism.mana_fluid_bucket": "Mana_Bucket",
+  "item.occultism.item_root_stick": "Debug",
+  "item.occultism.mind_table": "Mind_Table",
+  "item.occultism.crystal": "crystal",
+  "item.occultism.crystal_1": "crystal",
+  "item.occultism.crystal_2": "crystal",
+  "item.occultism.crystal_3": "crystal",
+  "item.occultism.crystal_4": "crystal",
+  "item.occultism.crystal_5": "crystal",
+  "item.occultism.crystal_6": "crystal",
+  "item.occultism.crystal_7": "crystal",
+  "item.occultism.crystal_8": "crystal",
+  "block.occultism.block_1": "Block1",
+  "block.occultism.mana_extractor": "Mana_Extractor",
   "block.occultism.orebrass": "OreBrass",
   "block.occultism.oremithril": "OreMithril",
   "block.occultism.oreleadzinc": "OreLeadZinc",
   "block.occultism.orebauxite": "OreBauxite",
-  "block.occultism.oretinstone": "OreTinStone"
+  "block.occultism.oretinstone": "OreTinStone",
+  "block.occultism.crystal_stone": "Crystal_Stone",
+  "fluid.occultism.mana_fluid": "Mana"
 }
