--- a/src/main/resources/assets/occultism/lang/zh_cn.json
+++ b/src/main/resources/assets/occultism/lang/zh_cn.json
@@ -10,11 +10,23 @@
   "item.occultism.fluid_bucket": "瓶子",
   "item.occultism.mana_fluid_bucket": "魔力瓶",
   "item.occultism.item_root_stick": "测试小木棍",
+  "item.occultism.mind_table": "心智表",
+  "item.occultism.crystal": "水晶",
+  "item.occultism.crystal_1": "水晶",
+  "item.occultism.crystal_2": "水晶",
+  "item.occultism.crystal_3": "水晶",
+  "item.occultism.crystal_4": "水晶",
+  "item.occultism.crystal_5": "水晶",
+  "item.occultism.crystal_6": "水晶",
+  "item.occultism.crystal_7": "水晶",
+  "item.occultism.crystal_8": "水晶",
   "block.occultism.block_1": "方块1",
+  "block.occultism.mana_extractor": "魔力提取器",
   "block.occultism.orebrass": "黄铜矿",
   "block.occultism.oremithril": "秘银矿",
   "block.occultism.oreleadzinc": "铅锌矿",
   "block.occultism.orebauxite": "铝土矿",
   "block.occultism.oretinstone": "锡石矿",
+  "block.occultism.crystal_stone": "水晶石",
   "fluid.occultism.mana_fluid": "液态魔力"
 }
