--- a/src/main/resources/assets/occultism/lang/zh_cn.json
+++ b/src/main/resources/assets/occultism/lang/zh_cn.json
@@ -39,5 +39,6 @@
   "block.occultism.sage": "鼠尾草",
   "block.occultism.mandela": "曼德拉种子",
   "block.occultism.noema": "心智之种",
-  "block.occultism.star_fantasy_fruit": "星幻果实之种"
+  "block.occultism.star_fantasy_fruit": "星幻果实之种",
+  "entity.occultism.historical_cover": "历史隐匿者"
 }
